static/css/style.css
@import url(https://fonts.googleapis.com/css?family=Roboto:400,100,900italic,900,700italic,700,500italic,500,400italic,300,300italic,100italic);

* {
  font-family:"Roboto";
  margin:0;
  padding:0;
  color:#333333;
}

h1 {
  font-weight:200;
  font-size:42px;
  text-align:center;
}
.desc {
  font-weight:500;
  font-size:20;
  text-align:center;
  margin-bottom:30px;
  color:#424242;
}
.large-desc {
  font-size:30px;
}
.large-h1 {
  margin-top:40px;
  font-size:60px;
  margin-bottom:10px;
}
body {
  background-color:#fcfcfc;  
}

.button-container {text-align:center;}

.button-container-team {text-align:right; margin-top:10px;margin-bottom:3px;}

.team p {
  color:#424242;
  margin-left:10px;
  margin-top:10px;
  font-size:15px;
}

.members-container p {
  font-size:13px;
  margin-top:10px;
  margin-bottom:-5px;
  word-wrap: break-word;
}
.button {
  text-align:center;
  margin:0 auto;
  font-weight:100;
  font-size:15px;
  padding-top:2px;
  padding-bottom:3px;
  padding-left:5px;
  padding-right:5px;
  background-color:white;
  text-decoration:none;
  border-style:solid;
  border-color:#dddddd;
  border-width:1px;
  border-radius:3px;
  cursor:pointer;
}

.team {
  padding:10px;
  padding-top:5px;
  background-color:#FFFFFF;
  border-style:solid;
  border-color:#dddddd;
  border-width:1px;
  border-radius:3px;
  width:300px;
  margin:0 auto;
  margin-bottom:20px;
}

.team h3 {
  font-weight:300;
  font-size:25px;
}

.team h4 {
  font-weight:700;
  font-size:10px;
  color:#666666;
  margin-left:15px;
}

.team h5 {
  font-weight:300;
  font-size:20px;
  margin-top:10px;
  margin-bottom:-10px;
}

.form-full input[type="text"] {
  background-color:white;
  text-decoration:none;
  border-style:solid;
  border-color:#dddddd;
  border-width:1px;
  border-radius:3px;
  width:400px;
  margin:0 auto;
  padding:5px;
  margin-bottom:5px;
}

.form-full {
  width:400px;
  margin:0 auto;
  margin-bottom:20px;
}

